--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- font awesome and google fonts -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Love Maths</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -19,11 +21,20 @@
 
     <div class="game-area">
         <div class="controls-area">
-            <button data-type="addition" class="btn btn--big btn--green"><i class="fas fa-plus"></i></button>
-            <button data-type="subtract" class="btn btn--big btn--blue"><i class="fas fa-minus"></i></button>
-            <button data-type="multiply" class="btn btn--big btn--orange"><i class="fas fa-times"></i></button>
-            <button data-type="division" class="btn btn--big btn--red"><i class="fas fa-divide"></i></button>
+            <button data-type="addition" class="btn btn--big btn--green">
+                <i class="fas fa-plus"></i>
+            </button>
+            <button data-type="subtract" class="btn btn--big btn--blue">
+                <i class="fas fa-minus"></i>
+            </button>
+            <button data-type="multiply" class="btn btn--big btn--orange">
+                <i class="fas fa-times"></i>
+            </button>
+            <button data-type="division" class="btn btn--big btn--red">
+                <i class="fas fa-divide"></i>
+            </button>
         </div>
+        
         <div class="question-area">
             <span id="operand1">0</span>
             <span id="operator">x</span>
@@ -43,3 +54,4 @@
     <script src="assets/js/script.js"></script>
 </body>
 
+</html>
