--- a/index.html
+++ b/index.html
@@ -11,18 +11,28 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Love Maths</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <h1 class="heading"><img class="logo" src="assets/images/logo.png" alt="logo"> Love Maths</h1>
+    <h1 class="heading">
+        <img class="logo" src="assets/images/logo.png" alt="logo"> Love Maths
+    </h1>
 
     <div class="game-area">
         <div class="controls-area">
-            <button data-type="addition" class="btn btn--big btn--green"><i class="fas fa-plus"></i></button>
-            <button data-type="subtract" class="btn btn--big btn--blue"><i class="fas fa-minus"></i></button>
-            <button data-type="multiply" class="btn btn--big btn--orange"><i class="fas fa-times"></i></button>
-            <button data-type="division" class="btn btn--big btn--red"><i class="fas fa-divide"></i></button>
+            <button data-type="addition" class="btn btn--big btn--green">
+                <i class="fas fa-plus"></i>
+            </button>
+            <button data-type="subtract" class="btn btn--big btn--blue">
+                <i class="fas fa-minus"></i>
+            </button>
+            <button data-type="multiply" class="btn btn--big btn--orange">
+                <i class="fas fa-times"></i>
+            </button>
+            <button data-type="division" class="btn btn--big btn--red">
+                <i class="fas fa-divide"></i>
+            </button>
         </div>
         <div class="question-area">
             <span id="operand1">0</span>
